Firefox CSS overflow Fix (#1386) (#1406)

--- a/ui/src/css/atoms/inputText.scss
+++ b/ui/src/css/atoms/inputText.scss
@@ -12,6 +12,7 @@ input[type="text"] {
   width: 100%;
   background: transparent;
   font-size: 18px;
+  min-width: 0;
 }
 
 input[type="text"]:focus {
